# gcp-iotc-osx-client

./: .gitignore  .gitmodules  CMakeLists.txt  config.h.in  main.c  place_pv.sh  readme.md  run.sh
src/: main.c
src/common/: example_utils.c  example_utils.h
